--- a/android/app/src/main/res/drawable/splash_screen.xml
+++ b/android/app/src/main/res/drawable/splash_screen.xml
@@ -1,6 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item>
-        <bitmap android:src="@drawable/splash" android:gravity="center" />
-    </item>
-</layer-list>
+<inset android:drawable="@drawable/splash"
+    xmlns:android="http://schemas.android.com/apk/res/android" />
