--- a/ios/Dev/LaunchApp/Base.lproj/LaunchApp.storyboard
+++ b/ios/Dev/LaunchApp/Base.lproj/LaunchApp.storyboard
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -27,20 +28,97 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="LaunchAppViewController" customModule="NativeTemplateDev" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" userLabel="Container">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="epB-j8-VoM" userLabel="QRView">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oOX-i5-jP6" userLabel="QRMaskView">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                        <color key="backgroundColor" red="0.031699623912572861" green="0.030538506805896759" blue="0.055877991020679474" alpha="0.58946917808219179" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.074080057442188263" green="0.12048513442277908" blue="0.25205829739570618" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="oOX-i5-jP6" firstAttribute="height" secondItem="epB-j8-VoM" secondAttribute="height" id="Jer-vc-9P7"/>
+                                    <constraint firstItem="oOX-i5-jP6" firstAttribute="width" secondItem="epB-j8-VoM" secondAttribute="width" id="W6d-5d-mrl"/>
+                                </constraints>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="gdH-in-pOH">
+                                <rect key="frame" x="20" y="723" width="374" height="31"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Clear Data" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eph-mO-4MX">
+                                        <rect key="frame" x="0.0" y="0.0" width="317" height="31"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="x2y-s7-GCQ" userLabel="ClearDataSwitch">
+                                        <rect key="frame" x="325" y="0.0" width="51" height="31"/>
+                                    </switch>
+                                </subviews>
+                            </stackView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your Mendix App URL" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3hE-cU-vah">
+                                <rect key="frame" x="20" y="774" width="318" height="40"/>
+                                <color key="backgroundColor" white="1" alpha="0.26078232020547948" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="W6y-H1-rGr"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="URL" returnKeyType="done" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="url"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vbz-0q-M8f" userLabel="GoButton" customClass="RoundedButton" customModule="NativeTemplateDev" customModuleProvider="target">
+                                <rect key="frame" x="346" y="774" width="48" height="40"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="7mb-Yb-iHc"/>
+                                    <constraint firstAttribute="width" constant="48" id="DB3-t6-nys"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                <state key="normal" title="Go">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="onTapGo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="i7E-za-BlQ"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <constraints>
+                            <constraint firstItem="Vbz-0q-M8f" firstAttribute="centerY" secondItem="3hE-cU-vah" secondAttribute="centerY" id="CDf-gU-qZ3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="3hE-cU-vah" secondAttribute="bottom" constant="48" id="Eon-sy-mQy"/>
+                            <constraint firstItem="Vbz-0q-M8f" firstAttribute="leading" secondItem="3hE-cU-vah" secondAttribute="trailing" constant="8" id="IT7-S4-QJP"/>
+                            <constraint firstItem="epB-j8-VoM" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="ZaJ-cS-D5E"/>
+                            <constraint firstItem="gdH-in-pOH" firstAttribute="leading" secondItem="3hE-cU-vah" secondAttribute="leading" id="cMe-nv-NIp"/>
+                            <constraint firstItem="gdH-in-pOH" firstAttribute="trailing" secondItem="Vbz-0q-M8f" secondAttribute="trailing" id="dny-1o-uMZ"/>
+                            <constraint firstItem="3hE-cU-vah" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="eS4-0g-s2c"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Vbz-0q-M8f" secondAttribute="trailing" constant="20" id="ko3-fh-uic"/>
+                            <constraint firstItem="3hE-cU-vah" firstAttribute="top" secondItem="gdH-in-pOH" secondAttribute="bottom" constant="20" id="sO4-hD-Le8"/>
+                            <constraint firstItem="epB-j8-VoM" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="sbd-M4-xL8"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="7x7-9b-1ro" appends="YES" id="FLQ-UM-1Az"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" id="b4v-MD-TTI"/>
                     <connections>
+                        <outlet property="clearDataSwitch" destination="x2y-s7-GCQ" id="OlV-l9-A4a"/>
+                        <outlet property="textField" destination="3hE-cU-vah" id="vpv-XW-r61"/>
                         <segue destination="0bC-YG-oDb" kind="show" identifier="MendixApp" id="fbH-kb-DO8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="7x7-9b-1ro">
+                    <connections>
+                        <action selector="unFocusTextField:" destination="BYZ-38-t0r" id="Vts-aI-acI"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="139" y="108"/>
+            <point key="canvasLocation" x="137.68115942028987" y="107.8125"/>
         </scene>
         <!--MendixApp-->
         <scene sceneID="wkC-5y-3uw">
