--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -4,6 +4,12 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@drawable/splash_screen</item>
+        <item name="android:editTextStyle">@style/MendixEditText</item>
+    </style>
+
+
+    <style name="MendixEditText" parent="Widget.AppCompat.EditText">
+        <item name="android:background">@android:color/transparent</item>
     </style>
 
 </resources>
