migration from rn-splash-screen to bootsplash

--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -20,4 +20,9 @@
         <item name="android:background">@android:color/transparent</item>
     </style>
 
+    <!-- BootSplash theme. -->
+    <style name="BootTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_screen</item>
+    </style>
+
 </resources>
